--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,29 +24,51 @@
     "\n",
     "def read_ratingdata():\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv('movies_metadata.csv',low_memory=False)\n",
-    "    ratings = pd.read_csv('ratings.csv') \n",
+    "    file_dir = r'C:\\Users\\datel\\Desktop\\Working_Bootcamp\\Module_8'\n",
+    "# #     kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
+    "#     ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
     "    file_dir = r'C:\\Users\\datel\\Desktop\\Working_Bootcamp\\Module_8'\n",
     "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file) \n",
-    "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
+    "#     # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
     "    \n",
     "    # 5. Return the three DataFrames\n",
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = \n",
-    "# Wikipedia data\n",
-    "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
-    "# Kaggle metadata\n",
-    "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
-    "# MovieLens rating data.\n",
-    "ratings_file = f'{file_dir}/ratings.csv'\n",
+    "file_dir = file_dir = r'C:\\Users\\datel\\Desktop\\Working_Bootcamp\\Module_8'\n",
+    "# # Wikipedia data\n",
+    "# wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
+    "# # Kaggle metadata\n",
+    "# kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
+    "# # MovieLens rating data.\n",
+    "# ratings_file = f'{file_dir}/ratings.csv'\n",
     "\n",
-    "# # 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "# wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "# # # 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
+    "# # wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wiki_movies_raw' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20744/2665713016.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwiki_movies_raw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'wiki_movies_raw' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "len(wiki_movies_raw)"
    ]
   },
   {
